# CPPMemoryChecker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/FirstExample/: CMakeLists.txt  Main.cpp
examples/SecondExample/: CMakeLists.txt  Main.cpp
src/: MemoryChecker.cpp
src/include/CPPMemoryChecker/: CPPMemoryChecker.hpp  MemoryChecker.hpp
tests/: CMakeLists.txt
tests/vendors/: CMakeLists.txt
vendors/: CMakeLists.txt
