cmake_minimum_required(VERSION 3.10)

project(
    FirstExample
)


file(
    GLOB
    SRC_FILES
    *.cpp
)


add_executable(
    ${PROJECT_NAME}
    ${SRC_FILES}
)


target_include_directories(
    ${PROJECT_NAME}
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(
    ${PROJECT_NAME}
    PRIVATE
    CPPMemoryChecker
)